--- a/src/pattern-library/variables.scss
+++ b/src/pattern-library/variables.scss
@@ -1,34 +1,34 @@
 // Colors
-$obc_red100: #d4021d;
-$obc_yellow100: #ffb432;
-$obc_green100: #326400;
-$obc_blue100: #003264;
+$red100: #d4021d;
+$yellow100: #ffb432;
+$green100: #326400;
+$blue100: #003264;
 
-$obc_black100: #222;
-$obc_black50: #333;
+$black100: #222;
+$black50: #333;
 
-$obc_grey400: #777;
-$obc_grey300: #9e9e9e;
-$obc_grey200: #c4c4c4;
-$obc_grey100: #e6e6e6;
-$obc_grey50: #eee;
-$obc_grey25: #f6f6f6;
+$grey400: #777;
+$grey300: #9e9e9e;
+$grey200: #c4c4c4;
+$grey100: #e6e6e6;
+$grey50: #eee;
+$grey25: #f6f6f6;
 
-$obc_white100: #fff;
+$white100: #fff;
 
 //Semantic colors
-$obc_error-color: #e6344b;
-$obc_warning-color: #ffb432;
-$obc_info-color: #003264;
-$obc_success-color: #326400;
+$error-color: #e6344b;
+$warning-color: #ffb432;
+$info-color: #003264;
+$success-color: #326400;
 
 // Font-sizes
-$obc_font50: 0.75; // 12px
-$obc_font100: 0.875; // 14px
-$obc_font150: 1; // 16px
-$obc_font200: 1.125; // 18px
-$obc_font300: 1.5; // 24px
-$obc_font400: 2.25; // 36px
+$font50: 0.75; // 12px
+$font100: 0.875; // 14px
+$font150: 1; // 16px
+$font200: 1.125; // 18px
+$font300: 1.5; // 24px
+$font400: 2.25; // 36px
 
 @mixin font-size($font-size) {
     $line-height: $font-size * 1.5;
